# ftech

./: .gitignore  CMakeLists.txt  DailyPriceMarketData.cpp  DailyPriceMarketData.h  HistoricalQuotes_ADBE_2-15-20162-10PMET.csv  HistoricalQuotes_ADBE_2-15-20162-51PMET.csv  MarketData.cpp  MarketData.h  MarketEvent.cpp  MarketEvent.h  MarketObserver.h  PriceMarketData.cpp  PriceMarketData.h  README.md  RateMarketData.cpp  RateMarketData.h  global.h  main.cpp  table.csv
data/: HistoricalQuotes_ADBE_2-15-20162-51PMET.csv  daily-prices.csv  goog.csv  goog2.csv  historical-prices.csv  rsi_sample.csv  table.goog-dec-1-2015-may-15-2016.csv  table.goog-jan-1-2016-may-15-2016.csv  table.goog-may-15-2016-may-21-2016.csv
indicators/: MarketData.cpp  MarketData.h  constants.h  indicator.cpp  indicator.h  obv.cpp  obv.h
indicators/adl/: adl.cpp  adl.h
indicators/ema/: ema.cpp  ema.h
indicators/macd/: macd.cpp  macd.h
indicators/obv/: obv.cpp  obv.h
indicators/rsi/: rsi.cpp  rsi.h
indicators/sma/: sma.cpp  sma.h
models/: macking.cpp  macking.h
